--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#ff3333",
-        "activityBar.activeBorder": "#00df00",
-        "activityBar.background": "#ff3333",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#00df00",
-        "activityBarBadge.foreground": "#15202b",
-        "sash.hoverBorder": "#ff3333",
-        "statusBar.background": "#ff0000",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#ff3333",
-        "statusBarItem.remoteBackground": "#ff0000",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#ff0000",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#ff000099",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "activityBar.activeBackground": "#999999",
+        "activityBar.activeBorder": "#5858c7",
+        "activityBar.background": "#999999",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#5858c7",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "sash.hoverBorder": "#999999",
+        "statusBar.background": "#808080",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#666666",
+        "statusBarItem.remoteBackground": "#808080",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#808080",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#80808099",
+        "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "red"
+    "peacock.color": "grey"
 }
